Add Cache Module

--- a/SurveyBasket.Api/appsettings.json
+++ b/SurveyBasket.Api/appsettings.json
@@ -2,12 +2,50 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=(LocalDB)\\MSSQLLocalDB;Database=SurveyBasket;Trusted_Connection=True;Encrypt=False"
   },
-  "Logging": {  
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Warning",
+      "Override": {
+        "Microsoft.AspNetCore": "Warning"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console"
+      },
+
+      {
+        "Name": "File",
+        "Args": {
+          "path": "./Logs/log-.txt",
+          "rollingInterval": "Day",
+          "formatter": "Serilog.Formatting.Compact.CompactJsonFormatter, Serilog.Formatting.Compact"
+          //"fileSizeLimitBytes": 1024,
+          //"rollOnFileSizeLimit":  true,
+        }
+      },
+
+      //After Add serilog-sinks-mssqlserver
+      {
+        "Name": "MSSqlServer",
+        "Args": {
+          "connectionString": "Server=(LocalDB)\\MSSQLLocalDB;Database=SurveyBasket;Trusted_Connection=True;Encrypt=False",
+          "sinkOptionsSection": {
+            "tableName": "Logs",
+            //"schemaName": "",
+            "autoCreateSqlTable": true
+          },
+          "restrictedToMinimumLevel": "Warning"
+        }
+      }
+    ],
+    "Enrich": ["FromLogContext", "WithMachineName", "WithThreadId"],
+    "Properties": {
+      "ApplicationName": "SurveyBasket"
     }
   },
+
   "AllowedHosts": "*",
   "Jwt": {
     "Key": "",
@@ -15,6 +53,7 @@
     "Audience": "SurveyBasketApp users",
     "ExpiryMinutes": 30
   },
+
   "AllowedOrigins": [
     "http://www.survey-basket.com"
   ]
