Add Register Module

--- a/SurveyBasket.Api/appsettings.json
+++ b/SurveyBasket.Api/appsettings.json
@@ -56,5 +56,13 @@
 
   "AllowedOrigins": [
     "http://www.survey-basket.com"
-  ]
+  ],
+
+  "MailSettings": {
+    "Mail": "casey94@ethereal.email",
+    "DisplayName": "Survey Basket",
+    "Password": "",
+    "Host": "smtp.ethereal.email",
+    "Port": "587"
+  }
 }
