Add Seed Data, Role and Permission

--- a/SurveyBasket.Api/appsettings.json
+++ b/SurveyBasket.Api/appsettings.json
@@ -1,13 +1,15 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(LocalDB)\\MSSQLLocalDB;Database=SurveyBasket;Trusted_Connection=True;Encrypt=False"
+    "DefaultConnection": "Server=(LocalDB)\\MSSQLLocalDB;Database=SurveyBasket;Trusted_Connection=True;Encrypt=False",
+    "HangfireConnection": "Server=(LocalDB)\\MSSQLLocalDB;Database=SurveyBasketJobs;Trusted_Connection=True;Encrypt=False"
   },
 
   "Serilog": {
     "MinimumLevel": {
       "Default": "Warning",
       "Override": {
-        "Microsoft.AspNetCore": "Warning"
+        "Microsoft.AspNetCore": "Warning",
+        "Hangfire": "Information"
       }
     },
     "WriteTo": [
@@ -64,5 +66,9 @@
     "Password": "",
     "Host": "smtp.ethereal.email",
     "Port": "587"
+  },
+  "HangfireSettings": {
+    "Username": "",
+    "Password": ""
   }
 }
