--- a/SurveyBasket.Api/appsettings.json
+++ b/SurveyBasket.Api/appsettings.json
@@ -1,7 +1,9 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(LocalDB)\\MSSQLLocalDB;Database=SurveyBasket;Trusted_Connection=True;Encrypt=False",
-    "HangfireConnection": "Server=(LocalDB)\\MSSQLLocalDB;Database=SurveyBasketJobs;Trusted_Connection=True;Encrypt=False"
+    //"DefaultConnection": "Server=OMEN;Database=SurveyBasket;Trusted_Connection=True;Encrypt=False",
+    //"HangfireConnection": "Server=OMEN;Database=SurveyBasketJobs;Trusted_Connection=True;Encrypt=False"
+    "DefaultConnection" : "Server=.;Database=SurveyBasket;User ID=SurveyBasket_User;Password=Q31KIewm5s7Ldp1w;Encrypt=False",
+    "HangfireConnection": "Server=.;Database=SurveyBasketJobs;User ID=SurveyBasketJobs_User;Password=21z2ReF0fbfGenH6;Encrypt=False"
   },
 
   "Serilog": {
@@ -13,9 +15,9 @@
       }
     },
     "WriteTo": [
-      {
-        "Name": "Console"
-      },
+      //{
+      //  "Name": "Console"
+      //},
 
       {
         "Name": "File",
@@ -32,7 +34,7 @@
       {
         "Name": "MSSqlServer",
         "Args": {
-          "connectionString": "Server=(LocalDB)\\MSSQLLocalDB;Database=SurveyBasket;Trusted_Connection=True;Encrypt=False",
+          "connectionString": "Server=.;Database=SurveyBasket;User ID=SurveyBasket_User;Password=Q31KIewm5s7Ldp1w;Encrypt=False",
           "sinkOptionsSection": {
             "tableName": "Logs",
             //"schemaName": "",
