fixes some issue

--- a/SurveyBasket.Api/appsettings.json
+++ b/SurveyBasket.Api/appsettings.json
@@ -34,7 +34,7 @@
       {
         "Name": "MSSqlServer",
         "Args": {
-          "connectionString": "Server=.;Database=SurveyBasket;User ID=SurveyBasket_User;Password=Q31KIewm5s7Ldp1w;Encrypt=False",
+          "connectionString": "Server=db30243.databaseasp.net; Database=db30243; User Id=db30243; Password=3Xm%Fr_2q@5G; Encrypt=False; MultipleActiveResultSets=True;",
           "sinkOptionsSection": {
             "tableName": "Logs",
             //"schemaName": "",
