--- a/SurveyBasket.Api/appsettings.json
+++ b/SurveyBasket.Api/appsettings.json
@@ -2,7 +2,12 @@
   "ConnectionStrings": {
     //"DefaultConnection": "Server=OMEN;Database=SurveyBasket;Trusted_Connection=True;Encrypt=False",
     //"HangfireConnection": "Server=OMEN;Database=SurveyBasketJobs;Trusted_Connection=True;Encrypt=False"
-    "DefaultConnection" : "Server=.;Database=SurveyBasket;User ID=SurveyBasket_User;Password=Q31KIewm5s7Ldp1w;Encrypt=False",
+
+    //For Server
+    //"DefaultConnection": "Server=db30243.databaseasp.net; Database=db30243; User Id=db30243; Password=3Xm%Fr_2q@5G; Encrypt=False; MultipleActiveResultSets=True;",
+    //"HangfireConnection": "Server=db30246.databaseasp.net; Database=db30246; User Id=db30246; Password=M!p7=2QmB%w6; Encrypt=False; MultipleActiveResultSets=True;",
+
+    "DefaultConnection": "Server=.;Database=SurveyBasket;User ID=SurveyBasket_User;Password=Q31KIewm5s7Ldp1w;Encrypt=False",
     "HangfireConnection": "Server=.;Database=SurveyBasketJobs;User ID=SurveyBasketJobs_User;Password=21z2ReF0fbfGenH6;Encrypt=False"
   },
 
@@ -34,7 +39,8 @@
       {
         "Name": "MSSqlServer",
         "Args": {
-          "connectionString": "Server=db30243.databaseasp.net; Database=db30243; User Id=db30243; Password=3Xm%Fr_2q@5G; Encrypt=False; MultipleActiveResultSets=True;",
+          //"connectionString": "Server=db30243.databaseasp.net; Database=db30243; User Id=db30243; Password=3Xm%Fr_2q@5G; Encrypt=False; MultipleActiveResultSets=True;",
+          "connectionString": "Server=.;Database=SurveyBasket;User ID=SurveyBasket_User;Password=Q31KIewm5s7Ldp1w;Encrypt=False",
           "sinkOptionsSection": {
             "tableName": "Logs",
             //"schemaName": "",
